--- a/gilded-rose/package.json
+++ b/gilded-rose/package.json
@@ -18,5 +18,10 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:mutants": "stryker run"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "coverageReporters": ["json", "html"],
+    "coverageDirectory": "reports"
   }
 }
